# info_glean

./: .env.defaults  Cargo.toml
data/: local.db
src/: dirtybase_entry.rs  main.rs
src/dirtybase_entry/: migration.rs  model.rs
src/dirtybase_entry/migration/: mig_1717224385_init.rs
src/dirtybase_entry/model/: field.rs  form.rs  section.rs
src/seed/: demo.rs
