[package]
name = "dirty_forms"
version = "0.1.0"
edition = "2021"

[dependencies]
dirtybase_contract = {path = "../dirtybase/lib/contract"}
dirtybase_app = {path = "../dirtybase/lib/app"}
dirtybase_db = {path = "../dirtybase/lib/db"}
dirtybase_helper = {path = "../dirtybase/lib/helper"}
tokio = { version = "1.38.0", features = ["full"] }
dotenvy = "0.15.7"
